Trim the portable app's bundled runtime and drop unused Skija natives
jpackage's --runtime-image was pointed at java.home, embedding the whole
running JDK (jmods, javac/javadoc data, every platform module) into every
app image. Derive the actual platform-module closure from what our own
modules declare (skipping static/optional requires) and jlink a runtime
with just that instead.

PortableApp also flattened every OS/arch variant of the Skija native jars
into the app image, even though a single jpackage app-image only ever
targets the OS/arch it's built on. Keep only the current platform's jar.

Together these take the Linux portable app's zip from ~200MB back down to
~65MB (previously-committed fearlessLinux.zip was 91.6MB, from before
Skija was added as a dependency).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>